internal/xds/translator/testdata/out/xds-ir-sublinear/global-ratelimit-query-parameters.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            foo/bar:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    path: foo/bar
                  name: first-route-ratelimit-query-parameters
                  route:
                    cluster: first-route-dest
                    rateLimits:
                    - actions:
                      - genericKey:
                          descriptorKey: first-route-ratelimit-query-parameters
                          descriptorValue: first-route-ratelimit-query-parameters
                      - headerValueMatch:
                          descriptorKey: rule-0-match-0
                          descriptorValue: rule-0-match-0
                          expectMatch: true
                          headers:
                          - name: x-user-id
                            stringMatch:
                              exact: one
                      - queryParameterValueMatch:
                          descriptorKey: rule-0-match-1
                          descriptorValue: rule-0-match-1
                          expectMatch: true
                          queryParameters:
                          - name: user
                            stringMatch:
                              exact: alice
                    upgradeConfigs:
                    - upgradeType: websocket
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
    name: first-listener/*
